ChangeLog


0.0.1
	First unofficial release

0.0.1.1
	Official release

0.0.1.2
	Added original name 
	Shortened verbage

0.0.1.3
	Updated assemblyversion.tt
	Added InstallChecker

0.0.2
	Updated for KSP 1.8

0.0.2.1
	Fixed URL in .version file

0.0.3
	Added modname into partinfo output
	Added PartInfo action in editor, to show partinfo for selected part already placed in window
		Has button to copy to clipboard

0.0.3.1
	Fixed typo in Close button

0.0.3.2
	Thanks to user @Gordon-Dry for this:
		Do not add ModulePartInfo to ThrottleControlledAvionics "parts" because ThrottleControlledAvionics uses dummy parts for tech tree unlocks of its modules.
	Along the same lines, Breaking Ground's deployable parts are now excluded

0.0.3.3 
	Added all part module info to display window
	Added option to have PAW entry available in the flight scene
	Changed output so that if the original part name was the same as the current part name, to only show the name
	Implemented using Stringbuilder to build the display string
	Added ability to copy all or just copy some of the part modules

0.0.3.4
	Fixed missing part info section
	Fixed issue with trying to show windows for more than one part

0.0.3.5
	Fixed modulePartInfo being shown 2x

0.0.3.6
	Added display of resources
	Added alternate skin
	Added resizing of window as percentage of screen height

0.0.3.7
	Added display of mass of part and resources

0.0.4
	Cleaned up output by stripping the markdown

0.0.4.1
	Replace html stripper code for better stripping

0.0.5 
	Added part size & Bulkhead Profiles
	Added Show Full toggle to show a shorter window