@@ -65,3 +65,4 @@ ChangeLog
 0.0.5 
 	Added part size & Bulkhead Profiles
 	Added Show Full toggle to show a shorter window
+	Added config option to default to large window
